# chess_p2p_app

./: CMakeLists.txt  compile_commands.json  planning.puml
include/: chess_board.hpp  chess_piece.hpp  connection.hpp  consts.hpp  renderer.hpp
src/: chess_board.cpp  connection.cpp  main.cpp  renderer.cpp
